# rl78emu

./: .gitignore  CMakeLists.txt  autogen.sh  configure.ac  doxyfile.sh  license.md  makefile.am  readme.md  version.h.in
.github/workflows/: rl78emu_ci_cd.yml
include/rl78cli/: config.h  main.h
include/rl78core/: cpu.h  mem.h  reg.h
include/rl78misc/: common.h  debug.h  logger.h
rl78emu_cli/: configure.ac  makefile.am
rl78emu_cli/include/: main.h
rl78emu_cli/include/rl78emu_cli/: config.h
rl78emu_cli/source/: main.c
rl78emu_cli/source/rl78emu_cli/: config.c
rl78emu_core/: configure.ac  makefile.am
rl78emu_core/include/rl78emu_core/: cpu.h  mem.h  reg.h  regs.h
rl78emu_core/source/rl78emu_core/: cpu.c  mem.c
rl78emu_misc/: configure.ac  makefile.am
rl78emu_misc/include/rl78emu_misc/: common.h  debug.h  logger.h
rl78emu_misc/source/rl78emu_misc/: common.c  debug.c  logger.c
scripts/: build.sh  check.sh  clean.sh  docs.sh  rebuild.sh  rl78emu_cli.sh  run.sh
source/rl78cli/: config.c  main.c
source/rl78core/: cpu.c  mem.c
source/rl78misc/: common.c  debug.c  logger.c
tests/: rl78core_suite.c  rl78inst_suite.c  rl78misc_suite.c  utester.h
