
# Init autoconf
AC_INIT([rl78emu_cli], [0.1.0], [https://gitlab.com/joba14/rl78emu/issues], [rl78emu_cli], [https://gitlab.com/joba14/rl78emu])

# Source directory (with sanity check file)
AC_CONFIG_SRCDIR([./makefile.am])

# Initializing automake tool
AM_INIT_AUTOMAKE([foreign subdir-objects])

# Setup output targets
AC_CONFIG_FILES([makefile])

# Initializing linking tool
LT_INIT

# Generate output
AC_OUTPUT
